<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="SettingScreen">
        <CheckBoxPreference
            android:key="hello"
            android:summary="Calls"
            android:title="Allow Calls">
        </CheckBoxPreference>

        <SwitchPreference
            android:key="vibrate"
            android:summary="This is for enable and disable vibration"
            android:switchTextOff="Disable"
            android:switchTextOn="Enable"
            android:title="Vibrate">

        </SwitchPreference>

        <SwitchPreference
            android:key="hotspot"
            android:summary="This is for enable and disable vibration"
            android:title="hotspot">

        </SwitchPreference>




    </PreferenceCategory>

    <PreferenceCategory
        android:key="first_category"
        android:title="News Updates">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="perform_updates"
            android:summary="enable or dis updates"
            android:title="enable updates"/>

        <ListPreference
            android:defaultValue="1"
            android:dependency="perform_updates"
            android:entries="@array/update"
            android:entryValues="@array/update"
            android:key="update"
            android:summary="update news every 60sec"
            android:title="update news">

        </ListPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Sync Information"
        android:key="sync_category">

        <CheckBoxPreference
            android:key="perform_sync"
            android:summary="Enable or disable data sync"
            android:title="Enable Auto Sync"
            android:defaultValue="true"/>

        <ListPreference
            android:key="sync_interval"
            android:title="Sync interval"
            android:summary="Define how often sync will be performed"
            android:defaultValue="1000"
            android:entries="@array/updateInterval"
            android:entryValues="@array/updateIntervalValues"
            android:dependency="perform_sync"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="Customisations"
        android:key="custom_category">


        <RingtonePreference
            android:key="notification_ringtone"
            android:title="Notification Ringtone"
            android:summary="Customise Notification Ringtone for you"
            android:dialogTitle="Notification Ringtone"
            android:dialogMessage="Customise Notification Ringtone for you"/>



    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/notifications_new_message"
            android:title="@string/title_new_notification_sound" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="@string/key_notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/summary_choose_ringtone"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_vibrate"
            android:summary="@string/summary_vibrate"
            android:title="@string/title_vibrate" />
    </PreferenceCategory>

</PreferenceScreen>